--- a/code2.html
+++ b/code2.html
@@ -277,7 +277,7 @@
                             </iframe>
                         </div>
                         <a class="googlemaps-html" href="https://www.embed-map.com" id="get-data-forembedmap">https://www.embed-map.com</a>
-                        <style>#embedmap-canvas img{max-width:none!important;background:none!important;font-size: inherit;font-weight:inherit;}
+                        <style>#embedmap-canvas img{max-width:none ;font-size: inherit;font-weight:inherit;}
                         </style>
                     </div>
                 </div>
